@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: lpoptions.man,v 1.8 2002/08/09 00:00:55 mike Exp $"
+.\" "$Id: lpoptions.man,v 1.9 2002/10/07 14:11:42 mike Exp $"
 .\"
 .\"   lpoptions man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -21,7 +21,7 @@
 .\"       EMail: cups-info@cups.org
 .\"         WWW: http://www.cups.org
 .\"
-.TH lpoptions 1 "Common UNIX Printing System" "5 September 2000" "Easy Software Products"
+.TH lpoptions 1 "Common UNIX Printing System" "7 October 2002" "Easy Software Products"
 .SH NAME
 lpoptions \- display or set printer options and defaults
 .SH SYNOPSIS
@@ -39,14 +39,14 @@ lpoptions \- display or set printer options and defaults
 .B lpoptions
 [ -h
 .I server
-] [ -p
+] [ -E ] [ -p
 .I dest[/instance]
 ] -l
 .br
 .B lpoptions
 [ -h
 .I server
-] [ -o
+] [ -E ] [ -o
 .I option=value
 ] ... [ -o
 .I option=value
@@ -58,12 +58,16 @@ lpoptions \- display or set printer options and defaults
 .B lpoptions
 [ -h
 .I server
-] -x
+] [ -E ] -x
 .I dest[/instance]
 .SH DESCRIPTION
 \fBlpoptions\fR displays or sets printer options and defaults.
 \fBlpoptions\fR shows the default printer options when run with no
 arguments. Other options include:
+.TP 5
+\-E
+.br
+Enabled encryption when communicating with the CUPS server.
 .TP 5
 \-d \fIdest[/instance]\fR
 .br
@@ -111,5 +115,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2002 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: lpoptions.man,v 1.8 2002/08/09 00:00:55 mike Exp $".
+.\" End of "$Id: lpoptions.man,v 1.9 2002/10/07 14:11:42 mike Exp $".
 .\"
