@@ -1,5 +1,5 @@
 /*
- * "$Id: cancel.c,v 1.26 2002/08/22 01:43:02 mike Exp $"
+ * "$Id: cancel.c,v 1.27 2002/10/07 14:11:42 mike Exp $"
  *
  *   "cancel" command for the Common UNIX Printing System (CUPS).
  *
@@ -192,6 +192,7 @@ main(int  argc,			/* I - Number of command-line arguments */
 	*/
 
         fprintf(stderr, "cancel: Unknown destination \"%s\"!\n", argv[i]);
+	return (1);
       }
 
      /*
@@ -287,5 +288,5 @@ main(int  argc,			/* I - Number of command-line arguments */
 
 
 /*
- * End of "$Id: cancel.c,v 1.26 2002/08/22 01:43:02 mike Exp $".
+ * End of "$Id: cancel.c,v 1.27 2002/10/07 14:11:42 mike Exp $".
  */
