@@ -1,5 +1,5 @@
 /*
- * "$Id: lpoptions.c,v 1.13 2002/08/18 17:23:33 mike Exp $"
+ * "$Id: lpoptions.c,v 1.14 2002/10/07 14:11:42 mike Exp $"
  *
  *   Printer option program for the Common UNIX Printing System (CUPS).
  *
@@ -138,6 +138,10 @@ main(int  argc,			/* I - Number of command-line arguments */
 	    }
 	    break;
 
+        case 'E' : /* Encrypt connection */
+	    cupsSetEncryption(HTTP_ENCRYPT_REQUIRED);
+	    break;
+
 	case 'l' : /* -l (list options) */
             if (dest == NULL)
 	    {
@@ -260,41 +264,34 @@ main(int  argc,			/* I - Number of command-line arguments */
 	    if (num_dests == 0)
 	      num_dests = cupsGetDests(&dests);
 
-            if ((dest = cupsGetDest(printer, instance, num_dests, dests)) == NULL)
+            if ((dest = cupsGetDest(printer, instance, num_dests, dests)) != NULL)
 	    {
-	      if (instance)
-		fprintf(stderr, "lpoptions: No such printer/instance: %s/%s\n",
-		        printer, instance);
+              cupsFreeOptions(dest->num_options, dest->options);
+
+             /*
+	      * If we are "deleting" the default printer, then just set the
+	      * number of options to 0; if it is also the system default
+	      * then cupsSetDests() will remove it for us...
+	      */
+
+	      if (dest->is_default)
+	      {
+		dest->num_options = 0;
+		dest->options     = NULL;
+	      }
 	      else
-		fprintf(stderr, "lpoptions: No such printer: %s\n", printer);
+	      {
+		num_dests --;
 
-	      return (1);
-	    }
-
-            cupsFreeOptions(dest->num_options, dest->options);
-
-           /*
-	    * If we are "deleting" the default printer, then just set the
-	    * number of options to 0; if it is also the system default
-	    * then cupsSetDests() will remove it for us...
-	    */
-
-	    if (dest->is_default)
-	    {
-	      dest->num_options = 0;
-	      dest->options     = NULL;
-	    }
-	    else
-	    {
-	      num_dests --;
-
-	      j = dest - dests;
-	      if (j < num_dests)
-		memcpy(dest, dest + 1, (num_dests - j) * sizeof(cups_dest_t));
+		j = dest - dests;
+		if (j < num_dests)
+		  memcpy(dest, dest + 1, (num_dests - j) * sizeof(cups_dest_t));
+	      }
 	    }
 
 	    cupsSetDests(num_dests, dests);
-	    dest = NULL;
+	    dest    = NULL;
+	    changes = -1;
 	    break;
 
 	default :
@@ -437,15 +434,15 @@ list_options(cups_dest_t *dest)	/* I - Destination to list */
 void
 usage(void)
 {
-  puts("Usage: lpoptions -d printer");
-  puts("       lpoptions [-p printer] -l");
-  puts("       lpoptions -p printer -o option[=value] ...");
-  puts("       lpoptions -x printer");
+  puts("Usage: lpoptions [-h server] [-E] -d printer");
+  puts("       lpoptions [-h server] [-E] [-p printer] -l");
+  puts("       lpoptions [-h server] [-E] -p printer -o option[=value] ...");
+  puts("       lpoptions [-h server] [-E] -x printer");
 
   exit(1);
 }
 
 
 /*
- * End of "$Id: lpoptions.c,v 1.13 2002/08/18 17:23:33 mike Exp $".
+ * End of "$Id: lpoptions.c,v 1.14 2002/10/07 14:11:42 mike Exp $".
  */
